[project]
name = "mytorch25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alphashape>=1.3.1",
    "black>=24.10.0",
    "cupy-cuda12x>=13.3.0",
    "dcmrtstruct2nii>=5",
    "descartes>=1.1.0",
    "dicom2nifti>=2.5.0",
    "elasticdeform>=0.5.1",
    "fire>=0.7.0",
    "fpdf>=1.7.2",
    "graphviz>=0.20.3",
    "highdicom>=0.22.0",
    "imbalanced-learn>=0.12.4",
    "ipywidgets>=8.1.5",
    "jupyterlab>=3.5.3",
    "keras-cv>=0.9.0",
    "keras==3.5.0",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.9.2",
    "medpy>=0.5.2",
    "meshio[all]>=5.3.5",
    "monai[all]>=1.4.0",
    "monailabel>=0.8.5",
    "multiprocess>=0.70.17",
    "mypy>=1.13.0",
    "mypy-extensions>=1.0.0",
    "natsort>=8.4.0",
    "nb-clean>=4.0.1",
    "nbconvert>=7.16.4",
    "nibabel>=5.3.2",
    "niicat>=0.4.4",
    "nnunet>=1.7.1",
    "nnunetv2>=2.5.1",
    "numba>=0.60.0",
    "numpy<2",
    "numpymaxflow>=0.0.7",
    "nvidia-ml-py>=12.560.30",
    "opencv-python-headless>=4.10.0.84",
    "opentsne>=1.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "patchify>=0.2.3",
    "platipy[backend,cardiac,nnunet]>=0.7.2",
    "polars>=1.15.0",
    "pre-commit>=4.0.1",
    "pudb>=2024.1.3",
    "pydantic>=2.10.2",
    "pydicom<3",
    "pydicer==0.1.0",
    "pydot>=3.0.2",
    "pytest>=8.3.3",
    "pytorch-tabnet>=4.1.0",
    "pyvista>=0.44.2",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.2",
    "ruff>=0.8.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.12.2",
    "shapely>=2.0.6",
    "simpleitk==2.3.1",
    "sparse>=0.15.4",
    "statsmodels>=0.14.4",
    "taichi>=1.7.2",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.11",
    "tk>=0.1.0",
    "tqdm>=4.67.1",
    "typer>=0.13.1",
    "typing-extensions>=4.12.2",
    "versioneer>=0.29",
    "xarray>=2024.11.0",
    "xgboost>=2.1.3",
    "xlsxwriter>=3.2.0",
    "hiddenlayer @ git+https://github.com/FabianIsensee/hiddenlayer.git@b7263b6dc4569da1b6dea5964e1eac78fa32fa77",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
